[gd_scene load_steps=5 format=2]

[ext_resource path="res://hud/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://hud/dialog_box/arrow.png" type="Texture" id=2]
[ext_resource path="res://hud/dialog_box/dialog_box.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "arrow"
tracks/0/type = "value"
tracks/0/path = NodePath("arrow:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 40, -64 ), Vector2( 40, -62 ) ]
}

[node name="dialog_box" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="."]
margin_left = -64.0
margin_top = -192.0
margin_right = 64.0
margin_bottom = -48.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox" type="HBoxContainer" parent="vbox"]
margin_top = 98.0
margin_right = 128.0
margin_bottom = 119.0

[node name="name_label" type="Label" parent="vbox/hbox"]
margin_right = 47.0
margin_bottom = 21.0
theme = ExtResource( 1 )
text = "Test:"

[node name="dialog_label" type="Label" parent="vbox"]
margin_top = 123.0
margin_right = 128.0
margin_bottom = 144.0
grow_vertical = 0
theme = ExtResource( 1 )
text = "对话样例"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="arrow" type="TextureRect" parent="."]
margin_left = 40.0
margin_top = -64.0
margin_right = 80.0
margin_bottom = -24.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="anim" type="AnimationPlayer" parent="."]
anims/arrow = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
